moved notebook and edited explanations

--- a/tutorials/skim_fa_continuous_basic.ipynb
+++ b/tutorials/skim_fa_continuous_basic.ipynb
@@ -5,15 +5,19 @@
    "id": "9ddafc92",
    "metadata": {},
    "source": [
-    "# Learning Functional ANOVA Decompositions in FAVA: Continuous Responses\n",
+    "# Basic FAVA Functionality on Simulated Data\n",
     "\n",
-    "In this tutorial, we show how to solve penalized least squares problems of the form\n",
+    "Suppose we collect data $D = \\{(x^{(n)}, y^{(n)})\\}^N_{n=1}$ with covariates $x^{(n)} \\in \\mathbb{R}^p$ and continuous scalar responses $y^{(n)}$. Suppose $y^{(n)} =  f^*(x^{(n)}) + \\epsilon^{(n)}$, where $ \\epsilon^{(n)} \\overset{\\text{i.i.d.}}{\\sim} \\mathcal{N}(0, \\sigma^2)$, and the unknown regression function $f^*$ belongs to some class of functions $\\mathcal{H}$. \n",
     "\n",
-    "$$\\hat{f} = \\arg \\min_{f \\in H} \\sum_{n=1}^N (y^{(n)} - f(x^{(n)}))^2 + \\lambda \\|f\\|_{\\mathcal{H}}^2, $$\n",
     "\n",
-    "with SKIM-FA kernels, where $\\mathcal{H}$ consists of the space of interactions of order up to $Q$: \n",
+    "In this tutorial, we consider the setting where $\\mathcal{H}$ contains the set of all linear main and interaction effects of order up to two, namely\n",
     "\n",
-    "$$\\mathcal{H} = \\left\\{f: f = \\sum_{V: |V| \\leq Q} f_V \\right\\} \\quad \\text{s.t.} \\quad \\forall A \\subsetneq B, \\ f_A \\perp_{\\mathcal{H}} f_B.$$\n",
+    "$$\\mathcal{H} := \\left\\{f: f = \\beta_{\\emptyset} + \\sum_{i=1}^p \\beta_{\\{i\\}} x_i + \\sum_{i < j} \\beta_{\\{i, j\\}} x_i x_j \\quad \\text{s.t.} \\quad \\beta_{V} \\in \\mathbb{R} \\quad \\forall V \\subset \\{1, \\cdots, p\\}, \\ |V| \\leq 2 \\right\\}. $$\n",
+    "\n",
+    "We show how to:\n",
+    "- Estimate $f^*$ by solving a penalized least squares problem of the form $\\hat{f} = \\arg \\min_{f \\in H} \\sum_{n=1}^N (y^{(n)} - f(x^{(n)}))^2 + \\lambda \\|f\\|_{\\mathcal{H}}^2$ with SKIM-FA kernels\n",
+    "- Recover estimates of each $\\beta_V$\n",
+    "- Perform an attribution analysis at both the covariate and individual datapoint level\n",
     "\n",
     "\n",
     "## Tutorial Outline\n",
@@ -21,17 +25,11 @@
     " - [Setup](#Setup)\n",
     "   - [Simulating Data](#Simulating-data)\n",
     "   - [Splitting Data](#Split-data-into-training-and-validation)\n",
-    " \n",
-    " \n",
     " - [Fitting SKIM-FA Model](#Fit-SKIM-FA-Model)\n",
-    " \n",
-    " \n",
-    "- [Assessing Quality of Fit](#Assessing-Quality-of-Fit)\n",
+    " - [Assessing Quality of Fit](#Assessing-Quality-of-Fit)\n",
     "   - [Predictive Performance vs. Random Forest](#Predictive-performance-vs.-random-forest)\n",
     "   - [Estimated Effects](#Estimated-effects) \n",
-    "\n",
-    "\n",
-    "- [Model Interpretation](#Model-interpretation)\n",
+    " - [Model Interpretation](#Model-interpretation)\n",
     "   - [Global Covariate Importance](#Global-covariate-importance)\n",
     "   - [Single Datapoint Explanation](#Single-datapoint-explanation)"
    ]
@@ -41,7 +39,7 @@
    "id": "a4d8b672",
    "metadata": {},
    "source": [
-    "# Setup\n",
+    "## Setup\n",
     "\n",
     "We start by importing the required packages in `fava` and `jax`."
    ]
@@ -73,7 +71,7 @@
    "id": "7a31fbcb",
    "metadata": {},
    "source": [
-    "## Simulating data\n",
+    "### Simulating data\n",
     "\n",
     "Below we generate simulated data, where the covariates $x \\in \\mathbb{R}^{100}$ and $y \\in \\mathbb{R}$. We assume that the first 4 covariates drive the response $y$, and the remaining covariates have no influence on the response. Specifically, the $n$th datapoint is generated as follows: $y^{(n)} = x_1^{(n)}x_2^{(n)} + x_2^{(n)}x_3^{(n)} + \\epsilon^{(n)}$, where $\\epsilon^{(n)} \\overset{\\text{i.i.d.}}{\\sim} \\mathcal{N}(0, 1)$ for $1 \\leq n \\leq 500$.\n"
    ]
@@ -106,7 +104,7 @@
    "id": "d2fa262a",
    "metadata": {},
    "source": [
-    "## Split data into training and validation"
+    "### Split data into training and validation"
    ]
   },
   {
@@ -129,7 +127,7 @@
    "id": "0e5a4343",
    "metadata": {},
    "source": [
-    "# Fit SKIM-FA Model\n",
+    "## Fit SKIM-FA Model\n",
     "\n",
     "Below we initialize SKIM-FA hyperparameters with default values. We run a total of $T=500$ iterations. The parameters that maximize predictive performance on the validation set are selected."
    ]
@@ -345,7 +343,7 @@
    "id": "d0a7c99e",
    "metadata": {},
    "source": [
-    "# Assessing Quality of Fit"
+    "## Assessing Quality of Fit"
    ]
   },
   {
@@ -353,7 +351,7 @@
    "id": "408dd1d6",
    "metadata": {},
    "source": [
-    "## Predictive performance vs. random forest"
+    "### Predictive performance vs. random forest"
    ]
   },
   {
@@ -443,7 +441,7 @@
    "id": "5366f526",
    "metadata": {},
    "source": [
-    "## Estimated effects\n",
+    "### Estimated effects\n",
     "\n",
     "Now we compute all of the main/interaction effects found by SKIM-FA. Since we fit a linear interaction model, we report the regression coefficients associated with each effect. Since we used a constant scheduler for c, we do not get exact sparsity."
    ]
@@ -547,7 +545,7 @@
    "id": "7d45df91",
    "metadata": {},
    "source": [
-    "# Model interpretation"
+    "## Model interpretation"
    ]
   },
   {
@@ -555,7 +553,7 @@
    "id": "c7b8f1d3",
    "metadata": {},
    "source": [
-    "## Global covariate importance"
+    "### Global covariate importance"
    ]
   },
   {
@@ -595,7 +593,7 @@
    "id": "70b1f61a",
    "metadata": {},
    "source": [
-    "## Single datapoint explanation"
+    "### Single datapoint explanation"
    ]
   },
   {
