fixing latex error

--- a/tutorials/skim_fa_continuous_basic.ipynb
+++ b/tutorials/skim_fa_continuous_basic.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Basic FAVA Functionality on Simulated Data\n",
     "\n",
-    "Suppose we collect data $D = \\{(x^{(n)}, y^{(n)})\\}^N_{n=1}$ with covariates $x^{(n)} \\in \\mathbb{R}^p$ and continuous scalar responses $y^{(n)}$. Suppose $y^{(n)} =  f^*(x^{(n)}) + \\epsilon^{(n)}$, where $ \\epsilon^{(n)} \\overset{\\text{i.i.d.}}{\\sim} \\mathcal{N}(0, \\sigma^2)$, and the unknown regression function $f^*$ belongs to some class of functions $\\mathcal{H}$. \n",
+    "Suppose we collect data $D = \\{(x^{(n)}, y^{(n)})\\}^N_{n=1}$ with covariates $x^{(n)} \\in \\mathbb{R}^p$ and continuous scalar responses $y^{(n)}$. Suppose $y^{(n)} =  f^*(x^{(n)}) + \\epsilon^{(n)}$, where $\\epsilon^{(n)} \\sim \\mathcal{N}(0, \\sigma^2)$, and the unknown regression function $f^*$ belongs to some class of functions $\\mathcal{H}$. \n",
     "\n",
     "\n",
     "In this tutorial, we consider the setting where $\\mathcal{H}$ contains the set of all linear main and interaction effects of order up to two, namely\n",
