--- a/tutorials/skim_fa_continuous_basic.ipynb
+++ b/tutorials/skim_fa_continuous_basic.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "### Simulating data\n",
     "\n",
-    "Below we generate simulated data, where the covariates $x \\in \\mathbb{R}^{100}$ and $y \\in \\mathbb{R}$. We assume that the first 4 covariates drive the response $y$, and the remaining covariates have no influence on the response. Specifically, the $n$th datapoint is generated as follows: $y^{(n)} = x_1^{(n)}x_2^{(n)} + x_2^{(n)}x_3^{(n)} + \\epsilon^{(n)}$, where $\\epsilon^{(n)} \\overset{\\text{i.i.d.}}{\\sim} \\mathcal{N}(0, 1)$ for $1 \\leq n \\leq 500$.\n"
+    "Below we generate simulated data, where the covariates $x \\in \\mathbb{R}^{100}$ and $y \\in \\mathbb{R}$. We assume that the first 4 covariates drive the response $y$, and the remaining covariates have no influence on the response. Specifically, the $n$th datapoint is generated as follows: $y^{(n)} = x_0^{(n)} + x_1^{(n)} + x_2^{(n)}x_3^{(n)} + \\epsilon^{(n)}$, where $\\epsilon^{(n)} \\overset{\\text{i.i.d.}}{\\sim} \\mathcal{N}(0, 1)$ for $1 \\leq n \\leq 500$.\n"
    ]
   },
   {
